Show each calendar with a different color

--- a/dist.ini
+++ b/dist.ini
@@ -12,13 +12,15 @@ name    = App-calx
 perl=5.010001
 strict=0
 warnings=0
+Color::ANSI::Util=0.161
+Color::RGB::Util=0.595
 DateTime=0
 Getopt::Long=0
 List::Util=1.45
-Term::ANSIColor=0
 Text::ANSI::Util=0.22
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.87
+
