--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.002
+version = 0.003
 
 name    = App-calx
 
@@ -17,6 +17,7 @@ Color::RGB::Util=0.595
 DateTime=0
 Getopt::Long=0
 List::Util=1.45
+PERLANCAR::Module::List=0
 Text::ANSI::Util=0.22
 
 [Prereqs / DevelopX_spec]
